src/tests/select/snapshots/ciboulette2pg__tests__select__relationships_many_to_one_sorting_by_child_full_path_select_query.snap
---
source: src/tests/select/mod.rs
expression: "sqlformat::format(query.as_str(), &sqlformat::QueryParams::None,\n                  sqlformat::FormatOptions::default())"

---
WITH "cte_peoples_data_0" AS (
  SELECT
    "public"."peoples"."id" :: TEXT AS "id",
    "public"."peoples"."id" AS "main_id",
    "public"."comments"."id" :: TEXT AS "related_id",
    $1 :: TEXT AS "related_type",
    $2 :: TEXT AS "type",
    NULL :: json AS "data",
    "public"."peoples"."favorite_color" AS "rel_favorite_color",
    "public"."peoples"."first-name" AS "sort_first-name"
  FROM
    "public"."peoples"
    INNER JOIN "public"."comments" ON "public"."comments"."author" = "public"."peoples"."id"
  WHERE
    "public"."comments"."id" = $3
),
"cte_rel_comments_data_1" AS (
  SELECT
    "public"."comments"."id" :: TEXT AS "id",
    "public"."comments"."id" AS "main_id",
    NULL :: TEXT AS "related_id",
    NULL :: TEXT AS "related_type",
    $4 :: TEXT AS "type",
    NULL :: json AS "data",
    "public"."comments"."article" AS "rel_article",
    "public"."comments"."author" AS "rel_author"
  FROM
    "public"."comments"
  WHERE
    "public"."comments"."id" = $5
),
"cte_final_main_data" AS (
  SELECT
    DISTINCT ON ("cte_peoples_data_0"."main_id") "cte_peoples_data_0".*,
    "cte_peoples_data_0"."sort_first-name" AS "sort__first-name"
  FROM
    "cte_peoples_data_0"
  ORDER BY
    "cte_peoples_data_0"."main_id"
) (
  SELECT
    "cte_final_main_data"."id",
    "cte_final_main_data"."type",
    "cte_final_main_data"."data",
    "cte_final_main_data"."related_type",
    "cte_final_main_data"."related_id"
  FROM
    "cte_final_main_data"
  ORDER BY
    "cte_final_main_data"."sort__first-name" ASC
);
