src/tests/select/snapshots/ciboulette2pg__tests__select__select_a_single_record_select_query.snap
---
source: src/tests/select/mod.rs
expression: "sqlformat::format(query.as_str(), &sqlformat::QueryParams::None,\n                  sqlformat::FormatOptions::default())"

---
WITH "cte_peoples_data_0" AS (
  SELECT
    "public"."peoples"."id" :: TEXT AS "id",
    "public"."peoples"."id" AS "main_id",
    NULL :: TEXT AS "related_id",
    NULL :: TEXT AS "related_type",
    $1 :: TEXT AS "type",
    JSON_BUILD_OBJECT(
      $2,
      "public"."peoples"."age",
      $3,
      "public"."peoples"."first-name",
      $4,
      "public"."peoples"."gender",
      $5,
      "public"."peoples"."last-name",
      $6,
      "public"."peoples"."twitter"
    ) AS "data",
    "public"."peoples"."favorite_color" AS "rel_favorite_color"
  FROM
    "public"."peoples"
  WHERE
    "public"."peoples"."id" = $7
) (
  SELECT
    "cte_peoples_data_0"."id",
    "cte_peoples_data_0"."type",
    "cte_peoples_data_0"."data",
    "cte_peoples_data_0"."related_type",
    "cte_peoples_data_0"."related_id"
  FROM
    "cte_peoples_data_0"
);
